--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>CV Fidel Mora</title>
+    <title>CV FM</title>
     <script src="https://kit.fontawesome.com/219fa174bb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,9 +56,9 @@
             <div class="col-md-8">
               <h1 class="display-5 fw-bold">Curriculum Vitae</h1><!-- Título -->
               <div class="fs-4">
-                <h2>FIDEL MORA AGUIRRE</h2>
-                <p>CONSTRUCTOR CIVIL</p>
-                <p>UNIVERSIDAD TÉCNICA FEDERICO SANTA MARÍA</p>
+                <h2>LALO AGUIRRE</h2>
+                <p>AUTODIDACTA</p>
+                <p>UNIVERSIDAD</p>
               </div>
             </div>
             <div class="col-md-4 text-center"> <!-- Columna para la imagen -->
@@ -71,7 +71,7 @@
     <p>Tengo 36 años y he desarrollado mi carrera en los sectores de la construcción, ventas y atención al público. He ocupado cargos como Director de Obras Municipal, liderando la ejecución de numerosos proyectos de infraestructura. Posteriormente, fortalecí mis habilidades de liderazgo y gestión de equipos, consolidándome como un profesional comprometido y resolutivo, orientado al logro de objetivos. </p>
     <h4>DATOS PERSONALES</h4>
     <ul>
-        <li>Nombre: Fidel Mora Aguirre</li>
+        <li>Nombre: Lalo Aguirre</li>
         <li>Lugar de Nacimiento: <a href="https://www.google.cl/maps/place/Punta+Arenas,+Magallanes+y+la+Ant%C3%A1rtica+Chilena/@-53.1417389,-70.9886682,12z/data=!3m1!4b1!4m6!3m5!1s0xbc52ca58b309cc21:0xfa616a8b65456916!8m2!3d-53.1633845!4d-70.9078264!16zL20vMDJuNXZj?entry=ttu&g_ep=EgoyMDI0MTIwNC4wIKXMDSoASAFQAw%3D%3D" target="_blank">Punta Arenas (XII Región, Chile)</a></li>
         <li>Fecha de Nacimiento: 17 de diciembre de 1987</li>
     </ul>
@@ -140,7 +140,7 @@
               <h5 class="card-title">CURSOS Y SEMINARIOS</h5>
               <hr class="w-80 mx-auto"> <!-- Linea 80% de ancho y centrado -->
               <p class="card-text mb-1">Instalación y Montade de Plantas de Generación Eléctrica Solar</p> <!--mb-1 margin bottom 1 -->
-              <p class="card-text mb-1">Seminario BIM - UTFSM</p>
+              <p class="card-text mb-1">Seminario BIM</p>
               <p class="card-text mb-1">	Futuro FullStack Java - DesafioLatam</p>
             </div>
           </div>
@@ -166,8 +166,8 @@
 
     <footer class="text-center p-4">
       <img src="./assets/img/CV_footer.png" alt="CV" width="100em" height="auto">
-      <p class="card-text mt-1">© FM Curriculum</p>
-      <p><i class="fa-brands fa-instagram me-2"></i><a href="http://instagram.com" target="_blank">Instagram</a> <i class="fa-brands fa-github ms-4 me-2"></i><a href="http://instagram.com" target="_blank">Github</a></p> 
+      <p class="card-text mt-1">© LA Curriculum</p>
+      <p><i class="fa-brands fa-instagram me-2"></i><a href="http://instagram.com" target="_blank">Instagram</a> <i class="fa-brands fa-github ms-4 me-2"></i><a href="https://github.com/Boricado/Lalo.github.io.git" target="_blank">Github</a></p> 
     </footer>
 
         
