Mejoras en el footer

--- a/index.html
+++ b/index.html
@@ -160,14 +160,11 @@
       </div>
       </div>
     </section>
-    
-
-        <p><a href="portafolio.html">Ir a portafolio</a></p>
 
     <footer class="text-center p-4">
       <img src="./assets/img/CV_footer.png" alt="CV" width="100em" height="auto">
       <p class="card-text mt-1">© LA Curriculum</p>
-      <p><i class="fa-brands fa-instagram me-2"></i><a href="http://instagram.com" target="_blank">Instagram</a> <i class="fa-brands fa-github ms-4 me-2"></i><a href="https://github.com/Boricado/Lalo.github.io.git" target="_blank">Github</a></p> 
+      <p><i class="fa-brands fa-instagram me-2"></i><a href="http://instagram.com" target="_blank">Instagram</a> <i class="fa-brands fa-github ms-4 me-2"></i><a href="https://github.com/Boricado/Lalo.github.io.git" target="_blank">Github</a> <i class="fa-solid fa-briefcase ms-4 me-2"></i><a href="portafolio.html" target="_blank">Portafolio</a></p> 
     </footer>
 
         
