--- a/portafolio.html
+++ b/portafolio.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row align-items-md-stretch">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3 border-top">
+                <div class="h-100 p-5 text-bg-dark rounded-3 border-top bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">NOMBRES DE LOS PROYECTOS</h2>
                 </div>
             </div>
@@ -31,7 +31,7 @@
         <!-- Desafio 1 -->
         <div class="row align-items-md-stretch mt-4">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3 bordered">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">Desafio 1</h2>
                     <h3 class="text-center">Curriculum</h3>
                 </div>
@@ -46,7 +46,7 @@
         <!-- Desafio 2 -->
         <div class="row align-items-md-stretch mt-3">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">Desafio 2</h2>
                     <h3 class="text-center">Viajes por el mundo</h3>
                 </div>
@@ -61,7 +61,7 @@
         <!-- Desafio 3 -->
         <div class="row align-items-md-stretch  mt-3">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">Desafio 3</h2>
                     <h3 class="text-center">Iguanas</h3>
                 </div>
@@ -76,7 +76,7 @@
         <!-- Desafio 4 -->
         <div class="row align-items-md-stretch  mt-3">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">Desafio 4</h2>
                     <h3 class="text-center">CUPPON</h3>
                 </div>
@@ -91,7 +91,7 @@
         <!-- Desafio 5 -->
         <div class="row align-items-md-stretch  mt-3 mb-3">
             <div class="col-md-6">
-                <div class="h-100 p-5 text-bg-dark rounded-3">
+                <div class="h-100 p-5 text-bg-dark rounded-3 bordered d-flex flex-column justify-content-center">
                     <h2 class="text-center">Desafio 5</h2>
                     <h3 class="text-center">Github</h3>
                 </div>
@@ -104,6 +104,11 @@
         </div>
     </div>
 
-    <td><p><a href="index.html">Volver a Curriculum</a></p>
+    <footer class="text-center p-4">
+        <img src="./assets/img/CV_footer.png" alt="CV" width="100em" height="auto">
+        <p class="card-text mt-1">© LA Curriculum</p>
+        <p><i class="fa-brands fa-instagram me-2"></i><a href="http://instagram.com" target="_blank">Instagram</a> <i class="fa-brands fa-github ms-4 me-2"></i><a href="https://github.com/Boricado/Lalo.github.io.git" target="_blank">Github</a> <i class="fa-solid fa-briefcase ms-4 me-2"></i><a href="index.html" target="_blank">Volver a Curriculim</a></p> 
+      </footer>
+
 </body>
 </html>
