Cambio de nombre en Navbar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="d-inline-block bg-success rounded-circle p-2 shadow">
               <img src="./assets/img/CV_logo.png" alt="Curriculum" width="40em" height="40em" class="rounded-circle">
             </div>
-            <span class="ms-2 text-white fw-bold">Curriculum</span>
+            <span class="ms-2 text-white fw-bold">Lalo Aguirre CV</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
